--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -9,11 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@xterm/addon-fit": "^0.11.0",
+    "@xterm/xterm": "^6.0.0",
     "next": "16.1.1",
     "react": "19.2.3",
-    "react-dom": "19.2.3",
-    "xterm": "^5.3.0",
-    "xterm-addon-fit": "^0.8.0"
+    "react-dom": "19.2.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
