--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dashboard",
+  "name": "@cli-agent-orchestrator/dashboard",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,28 +9,23 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@cloudscape-design/components": "^3.0.1169",
+    "@cloudscape-design/global-styles": "^1.0.49",
     "@xterm/addon-fit": "^0.11.0",
     "@xterm/xterm": "^6.0.0",
+    "@xyflow/react": "^12.10.0",
+    "ace-builds": "^1.43.5",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "@next/swc-linux-x64-gnu": "16.1.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
-    "tailwindcss": "^4",
     "typescript": "^5"
-  },
-  "ignoreScripts": [
-    "sharp",
-    "unrs-resolver"
-  ],
-  "trustedDependencies": [
-    "sharp",
-    "unrs-resolver"
-  ]
+  }
 }
